package-lock shouldn't be used when using yarn. renamed postcreate in post-create.sh

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -99,10 +99,10 @@
           // .NET Interactive
           "ms-dotnettools.dotnet-interactive-vscode",
           "ms-python.python",
-          "ms-toolsai.jupyter",
-          "ms-toolsai.jupyter-keymap",
-          "ms-toolsai.jupyter-renderers",
-          "RandomFractalsInc.vscode-data-table"
+          // "ms-toolsai.jupyter",
+          // "ms-toolsai.jupyter-keymap",
+          // "ms-toolsai.jupyter-renderers",
+          // "RandomFractalsInc.vscode-data-table"
         ],
         "settings": {
           // Uncomment if you want to use zsh as the default shell
