setup of the right font to use in codespaces

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -114,7 +114,7 @@
           },
   
           // Uncomment if you want to use CaskaydiaCove Nerd Font as the default terminal font
-          "terminal.integrated.fontFamily": "CaskaydiaCove Nerd Font",
+          "terminal.integrated.fontFamily": "CaskaydiaCove Nerd Font Mono",
   
           // Uncomment if you want to disable the minimap view
           "editor.minimap.enabled": false,
