verified devcontainer dependencies and commented azurite

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -65,7 +65,7 @@
           "GitHub.vscode-pull-request-github",
   
           // Recommended extensions - Azure
-          "Azurite.azurite",
+          // "Azurite.azurite",
           "ms-azuretools.vscode-bicep",
   
           // Recommended extensions - Collaboration
