--- a/OpenGym/package.json
+++ b/OpenGym/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@azure/msal-browser": "^2.32.1",
+    "@azure/msal-react": "^1.5.1",
     "@babel/core": "^7.20.2",
     "@babel/plugin-syntax-flow": "^7.18.6",
     "@babel/plugin-transform-react-jsx": "^7.19.0",
@@ -77,7 +79,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "4.4.0",
-    "@env-cmd": "^10.1.0"
+    "env-cmd": "^10.1.0"
   },
   "description": "An Ionic project",
   "engines": {
