--- a/OpenGym/package.json
+++ b/OpenGym/package.json
@@ -31,7 +31,6 @@
     "react-dom": "^18.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.0",
     "typescript": "^4.8.x",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
@@ -79,7 +78,8 @@
   },
   "devDependencies": {
     "@capacitor/cli": "4.4.0",
-    "env-cmd": "^10.1.0"
+    "env-cmd": "^10.1.0",
+    "react-scripts": "^5.0.0"
   },
   "description": "An Ionic project",
   "engines": {
