added docker-in-docker feature to be able to use docker inside the docker container when developing

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,6 +22,10 @@
     ],
   
     "features": {
+      "ghcr.io/devcontainers/features/docker-in-docker": {
+        "version": "latest"
+      },
+
       // Uncomment the below to install Azure CLI
       "ghcr.io/devcontainers/features/azure-cli:1": {
         "version": "latest"
