--- a/OpenGym/package.json
+++ b/OpenGym/package.json
@@ -13,37 +13,32 @@
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/status-bar": "4.1.1",
-    "@ionic/react": "^6.0.0",
+    "@ionic/react": "^6.4.1",
     "@ionic/react-router": "^6.4.1",
-    "@testing-library/dom": "^8.19.0",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.2.4",
     "@types/node": "^18.11.17",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@types/react-router": "^5.1.11",
-    "@types/react-router-dom": "^5.1.7",
-    "axios": "^1.1.3",
-    "ionicons": "^6.0.3",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@types/react-router": "^5.1.19",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.2.1",
+    "ionicons": "^6.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "typescript": "^4.8.x",
+    "typescript": "^4.9.4",
     "web-vitals": "^3.1.0",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
-    "workbox-cacheable-response": "^5.1.4",
+    "workbox-cacheable-response": "^6.5.4",
     "workbox-core": "^6.5.4",
-    "workbox-expiration": "^5.1.4",
+    "workbox-expiration": "^6.5.4",
     "workbox-google-analytics": "^6.5.4",
     "workbox-navigation-preload": "^6.5.4",
     "workbox-precaching": "^6.5.4",
     "workbox-range-requests": "^6.5.4",
     "workbox-routing": "^6.5.4",
-    "workbox-strategies": "^5.1.4",
+    "workbox-strategies": "^6.5.4",
     "workbox-streams": "^6.5.4"
   },
   "resolutions": {
@@ -63,8 +58,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -80,9 +74,9 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "4.4.0",
+    "@capacitor/cli": "4.6.1",
     "env-cmd": "^10.1.0",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^5.0.1"
   },
   "description": "An Ionic project",
   "engines": {
