added new configs for vs local debug of graphql served through swa locally

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -36,6 +36,45 @@
                 "${workspaceFolder}/Backend/Catalog/Catalog.API/Catalog.API.csproj"
             ],
             "problemMatcher": "$msCompile"
-        }
+        },
+        {
+            "appId": "catalog",
+            "appPort": 6000,
+            "label": "dapr-debug",
+            "type": "dapr",
+            "dependsOn": "build"
+        },
+        {
+            "appId": "catalog",
+            "label": "daprd-down",
+            "type": "daprd-down"
+        },
+        {
+			"type": "shell",
+			"label": "swa start",
+			"command": "swa start",
+			"isBackground": true,
+			"problemMatcher": [
+				{
+					"pattern": [
+						{
+							"regexp": ".",
+							"file": 1,
+							"location": 2,
+							"message": 3
+						}
+					],
+					"background": {
+						"activeOnStart": true,
+						"beginsPattern": ".",
+						"endsPattern": "Waiting for .+6000 to be ready",
+					}
+				}
+			],
+			"options": {
+				"cwd": "${workspaceFolder}"
+			},
+			"dependsOn": []
+		}
     ]
 }
