--- a/swa-cli.config.json
+++ b/swa-cli.config.json
@@ -6,7 +6,9 @@
       "outputLocation": "build",
       "appBuildCommand": "npm run build",
       "run": "npm start",
-      "appDevserverUrl": "http://localhost:3000"
+      "appDevserverUrl": "http://localhost:3000",
+      "apiDevserverUrl": "http://localhost:6000",
+      "apiLocation": "api"
     }
   }
 }
