moved ahead in the integration of the RP in the BE

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,10 +14,34 @@
             }
         },
         {
+            "name": "Debug YARP with Dapr",
+            "type": "coreclr",
+            "request": "launch",
+            "program": "${workspaceFolder}/Backend/APIGateways/YARP/bin/Debug/net7.0/YARP.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/Backend/APIGateways/YARP",
+            "stopAtEntry": false,
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+            },
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "sourceFileMap": {
+                "/Views": "${workspaceFolder}/Views"
+            },
+            "presentation": {
+                "hidden": true,
+                "group": "",
+                "order": 1
+            }
+        },
+        {
             "name": "Debug Catalog with Dapr",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "dapr-debug",
+            "preLaunchTask": "dapr-debug-catalog",
             "program": "${workspaceFolder}/Backend/Catalog/Catalog.API/bin/Debug/net7.0/Catalog.API.dll",
             "args": [],
             "cwd": "${workspaceFolder}/Backend/Catalog/Catalog.API",
@@ -32,19 +56,46 @@
             "sourceFileMap": {
                 "/Views": "${workspaceFolder}/Views"
             },
-            "postDebugTask": "daprd-down",
+            "postDebugTask": "daprd-down-catalog",
             "presentation": {
                 "hidden": true,
                 "group": "",
                 "order": 1
             }
+        },
+        {
+            "name": "Debug YARP with Dapr with Dapr",
+            "type": "coreclr",
+            "request": "launch",
+            "program": "${workspaceFolder}/Backend/APIGateways/YARP/bin/Debug/net7.0/YARP.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/Backend/APIGateways/YARP",
+            "stopAtEntry": false,
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+            },
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "sourceFileMap": {
+                "/Views": "${workspaceFolder}/Views"
+            },
+            "presentation": {
+                "hidden": true,
+                "group": "",
+                "order": 1
+            },
+            "preLaunchTask": "dapr-debug-yarp",
+            "postDebugTask": "daprd-down-yarp"
         }
     ],
     "compounds": [
         {
-            "name": "Launch Static Web App",
+            "name": "Launch SWA + BE with Dapr",
             "configurations": [
                 "Debug Catalog with Dapr",
+                "Debug YARP with Dapr",
                 "Launch Edge"
             ],
             "stopAll": true,
