--- a/Backend/APIGateways/YARP/appsettings.json
+++ b/Backend/APIGateways/YARP/appsettings.json
@@ -11,11 +11,12 @@
       "catalog": {
         "ClusterId": "daprSidecar",
         "Transforms": [{
-          "RequestHeader": "dapr-app-id",
+          "RequestHeader": "catalog",
           "Append": "catalog"
+          // ,"PathRemovePrefix": "api/catalog"
         }],
         "Match": {
-          "Path": "/catalog/{*any}"
+          "Path": "/api/catalog/{*any}"
         }
       },
       "ratingRequests": {
@@ -23,9 +24,10 @@
         "Transforms": [{
           "RequestHeader": "dapr-app-id",
           "Append": "api2"
+          // ,"PathRemovePrefix": "api/api2"
         }],
         "Match": {
-          "Path": "/api2/{*any}"
+          "Path": "/api/api2/{*any}"
         }
       }
     },
