--- a/Backend/APIGateways/YARP/appsettings.json
+++ b/Backend/APIGateways/YARP/appsettings.json
@@ -10,21 +10,21 @@
     "Routes": {
       "catalog": {
         "ClusterId": "daprSidecar",
-        "Transforms": [{
-          "RequestHeader": "catalog",
-          "Append": "catalog"
-          // ,"PathRemovePrefix": "api/catalog"
-        }],
         "Match": {
           "Path": "/api/catalog/{*any}"
-        }
+        },
+        "Transforms": [{
+          "RequestHeader": "dapr-app-id",
+          "Set": "catalog"
+        },
+        { "PathRemovePrefix": "/api/catalog/" }
+      ]
       },
       "ratingRequests": {
         "ClusterId": "daprSidecar",
         "Transforms": [{
           "RequestHeader": "dapr-app-id",
-          "Append": "api2"
-          // ,"PathRemovePrefix": "api/api2"
+          "Set": "api2"
         }],
         "Match": {
           "Path": "/api/api2/{*any}"
@@ -35,7 +35,7 @@
       "daprSidecar": {
         "Destinations": {
           "sidecar": {
-            "Address": "http://localhost:3500/"
+            "Address": "http://localhost:36501/"
           }
         }
       }
