fixed configs, now everything correctly works debugging locally.

--- a/Backend/APIGateways/YARP/appsettings.json
+++ b/Backend/APIGateways/YARP/appsettings.json
@@ -11,24 +11,19 @@
       "catalog": {
         "ClusterId": "daprSidecar",
         "Match": {
-          "Path": "/api/catalog/{*any}"
+          //TODO - Set this as variable like {serviceName}
+          "Path": "/api/catalog/{**remainder}"
         },
-        "Transforms": [{
-          "RequestHeader": "dapr-app-id",
-          "Set": "catalog"
-        },
-        { "PathRemovePrefix": "/api/catalog/" }
-      ]
-      },
-      "ratingRequests": {
-        "ClusterId": "daprSidecar",
-        "Transforms": [{
-          "RequestHeader": "dapr-app-id",
-          "Set": "api2"
-        }],
-        "Match": {
-          "Path": "/api/api2/{*any}"
-        }
+        "Transforms": [
+          {
+            "PathPattern": "{**remainder}"
+          },
+          {
+            "RequestHeader": "dapr-app-id",
+            //TODO - Set this as variable like {serviceName}
+            "Append": "catalog"
+          }
+        ]
       }
     },
     "Clusters": {
