--- a/.github/workflows/azure-static-web-app-teardown.yml
+++ b/.github/workflows/azure-static-web-app-teardown.yml
@@ -24,6 +24,8 @@ jobs:
         with:
           azure_static_web_apps_api_token: ${{ env.AZURE_STATIC_WEB_APPS_API_TOKEN }} # secret containing api token for app
           action: "close"
+          skip_api_build: true
+          skip_app_build: true
           ###### Repository/Build Configurations - These values can be configured to match you app requirements. ######
           # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
           app_location: ${{ env.APP_LOCATION }}
