--- a/.github/workflows/azure-static-web-app-build-deploy.yml
+++ b/.github/workflows/azure-static-web-app-build-deploy.yml
@@ -10,6 +10,8 @@ on:
     types: [opened, synchronize, reopened, closed]
     branches:
       - develop
+  workflow_dispatch:
+
 
 # Environment variables available to all jobs and steps in this workflow
 env:
