--- a/.github/workflows/yarp-build-publish.yml
+++ b/.github/workflows/yarp-build-publish.yml
@@ -10,6 +10,7 @@ on:
     types: [opened, synchronize, reopened, closed]
     branches:
       - develop
+  workflow_dispatch:
 
 jobs:
   build-and-push-image:
