--- a/.github/workflows/yarp-build-publish.yml
+++ b/.github/workflows/yarp-build-publish.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Build and push image
         uses: docker/build-push-action@v4
         with:
-          context: .
+          context: ./Backend/APIGateways/YARP
           file: ./Backend/APIGateways/YARP/Dockerfile
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
