push images when it's not a pr

--- a/.github/workflows/yarp-build-publish.yml
+++ b/.github/workflows/yarp-build-publish.yml
@@ -56,3 +56,4 @@ jobs:
           file: ./Backend/APIGateways/YARP/Dockerfile
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          push: ${{ github.event_name != 'pull_request' }}
