--- a/.github/workflows/catalog-build-publish.yml
+++ b/.github/workflows/catalog-build-publish.yml
@@ -56,3 +56,4 @@ jobs:
           file: ./Backend/Backend/Catalog/Catalog.API/Dockerfile
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          push: ${{ github.event_name != 'pull_request' }}
