--- a/Backend/Gym/Dockerfile
+++ b/Backend/Gym/Dockerfile
@@ -7,16 +7,20 @@ ENV ASPNETCORE_URLS=http://+:80
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0-jammy AS build
 WORKDIR /src
-COPY *.csproj .
+COPY Gym.Domain/Gym.Domain.csproj ./Gym.Domain/
+COPY Gym.Infrastructure/Gym.Infrastructure.csproj ./Gym.Infrastructure/
+COPY Gym.API/Gym.API.csproj ./Gym.API/
+RUN dotnet restore "Gym.Domain/Gym.Domain.csproj"
+RUN dotnet restore "Gym.Infrastructure/Gym.Infrastructure.csproj"
 RUN dotnet restore "Gym.API/Gym.API.csproj"
 
 # COPY EVERYTHING ELSE
 COPY . .
-RUN dotnet build "Gym.API.csproj" -c Release -o /app/build
+RUN dotnet build "Gym.API/Gym.API.csproj" -c Release -o /app/build
 
 # copy everything else and build app
 FROM build AS publish
-RUN dotnet publish -c Release -o /app/publish --self-contained false --no-restore
+RUN dotnet publish "Gym.API/Gym.API.csproj" -c Release -o /app/publish --self-contained false --no-restore
 
 # final stage/image
 FROM base as final
