--- a/.github/workflows/gym-build-publish.yml
+++ b/.github/workflows/gym-build-publish.yml
@@ -54,8 +54,8 @@ jobs:
       - name: Build and push image
         uses: docker/build-push-action@v4
         with:
-          context: ./Backend/Gym/Gym.API
-          file: ./Backend/Gym/Gym.API/Dockerfile
+          context: ./Backend/Gym
+          file: ./Backend/Gym/Dockerfile
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           push: ${{ github.event_name != 'pull_request' }}
