--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -6,7 +6,7 @@
 version: 2
 updates:
   - package-ecosystem: "nuget" # See documentation for possible values
-    directory: "/Backend/Catalog/Catalog.API/" # Location of package manifests
+    directory: "/Backend/" # Location of package manifests
     schedule:
       interval: "daily"
 
