fixes to gh workflows

--- a/.github/workflows/azure-static-web-app-build-deploy.yml
+++ b/.github/workflows/azure-static-web-app-build-deploy.yml
@@ -7,9 +7,11 @@ on:
     paths:
       - 'OpenGym/**'
   pull_request:
-    types: [opened, synchronize, reopened, closed]
+    types: [opened, synchronize, reopened]
     branches:
       - develop
+    paths:
+      - 'OpenGym/**'
   workflow_dispatch:
 
 
