--- a/.github/workflows/azure-static-web-app-teardown.yml
+++ b/.github/workflows/azure-static-web-app-teardown.yml
@@ -5,6 +5,9 @@ on:
     types: [closed]
     branches:
       - develop
+    paths:
+      - 'OpenGym/**'
+  workflow_dispatch:
 
 # Environment variables available to all jobs and steps in this workflow
 env:
