--- a/.github/workflows/yarp-build-publish.yml
+++ b/.github/workflows/yarp-build-publish.yml
@@ -6,12 +6,14 @@ on:
       - develop
     paths:
       - 'Backend/APIGateways/YARP/**'
+      - '.github/workflows/yarp-build-publish.yml'
   pull_request:
-    types: [opened, synchronize, reopened, closed]
+    types: [opened, synchronize, reopened]
     branches:
       - develop
     paths:
       - 'Backend/APIGateways/YARP/**'
+      - '.github/workflows/yarp-build-publish.yml'
   workflow_dispatch:
 
 jobs:
