--- a/.github/workflows/gym-build-publish.yml
+++ b/.github/workflows/gym-build-publish.yml
@@ -17,7 +17,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-push-image:
+  build-and-push-gym-image:
     permissions:
       contents: read
       packages: write
