--- a/.github/workflows/azure-static-web-app-build-deploy-ignored-by-path.yml
+++ b/.github/workflows/azure-static-web-app-build-deploy-ignored-by-path.yml
@@ -13,6 +13,6 @@ on:
 jobs:
   build_and_deploy_job:
     runs-on: ubuntu-latest
-    name: Build and Deploy Job
+    name: Build and Deploy SWA Job
     steps:
       - run: 'echo "No build required"'
