--- a/.github/workflows/yarp-build-publish-ignored-by-path.yml
+++ b/.github/workflows/yarp-build-publish-ignored-by-path.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-push-image:
+  build-and-push-yarp-image:
     runs-on: ubuntu-latest
     steps:
       - run: 'echo "No build required"'
