now hitting f5 brings up the env correctly even if yarn wasn't previously launched

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -85,7 +85,7 @@
     ],
     "compounds": [
         {
-            "name": "Launch SWA + BE with Dapr",
+            "name": "Launch SWA + Catalog,YARP and Dapr",
             "configurations": [
                 "Debug Catalog with Dapr",
                 "Debug YARP with Dapr",
